// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-dxynEC {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
    white-space: nowrap;
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-cLxoRD-size-md .c-dOcJjJ,
  .c-cwQMhQ-cLxoRD-size-md .c-dxynEC,
  .c-cwQMhQ-cLxoRD-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-eHHTYb-theme-primaryDark .c-dxynEC {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-cLxoRD-size-md c-cwQMhQ-kCnvZP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-eHHTYb-theme-primaryDark"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-dxynEC"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with a themed header 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-dxynEC {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
    white-space: nowrap;
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-cLxoRD-size-md .c-dOcJjJ,
  .c-cwQMhQ-cLxoRD-size-md .c-dxynEC,
  .c-cwQMhQ-cLxoRD-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-eHHTYb-theme-primaryDark .c-dxynEC {
    background: var(--colors-primaryDark);
  }

  .c-cwQMhQ-LQLpC-size-lg .c-dOcJjJ,
  .c-cwQMhQ-LQLpC-size-lg .c-dxynEC,
  .c-cwQMhQ-LQLpC-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }

  .c-PJLV-hHEXZz-theme-primary .c-dxynEC {
    background: var(--colors-primary);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-cLxoRD-size-md c-cwQMhQ-kCnvZP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-hHEXZz-theme-primary"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-dxynEC"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-dxynEC {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
    white-space: nowrap;
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-cLxoRD-size-md .c-dOcJjJ,
  .c-cwQMhQ-cLxoRD-size-md .c-dxynEC,
  .c-cwQMhQ-cLxoRD-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-eHHTYb-theme-primaryDark .c-dxynEC {
    background: var(--colors-primaryDark);
  }

  .c-cwQMhQ-LQLpC-size-lg .c-dOcJjJ,
  .c-cwQMhQ-LQLpC-size-lg .c-dxynEC,
  .c-cwQMhQ-LQLpC-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-LQLpC-size-lg c-cwQMhQ-kCnvZP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-eHHTYb-theme-primaryDark"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-dxynEC"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with square corners 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-dxynEC {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
    white-space: nowrap;
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-cLxoRD-size-md .c-dOcJjJ,
  .c-cwQMhQ-cLxoRD-size-md .c-dxynEC,
  .c-cwQMhQ-cLxoRD-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-dxynEC:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-kCnvZP-corners-round .c-PJLV:last-child .c-dOcJjJ:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-eHHTYb-theme-primaryDark .c-dxynEC {
    background: var(--colors-primaryDark);
  }

  .c-cwQMhQ-LQLpC-size-lg .c-dOcJjJ,
  .c-cwQMhQ-LQLpC-size-lg .c-dxynEC,
  .c-cwQMhQ-LQLpC-size-lg .c-hYjVQ {
    height: var(--sizes-5);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-cLxoRD-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-eHHTYb-theme-primaryDark"
    >
      <tr
        class="c-PJLV"
      >
        <th
          class="c-dxynEC"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-PJLV"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
